--- a/site/index.html
+++ b/site/index.html
@@ -91,7 +91,7 @@
 					if(lists.lang.size === 0)
 					{ langOutput.innerText = "Add some languages first."; }
 					else if(lists.lang.size === 1)
-					{ langOutput.innerText = "Add more than one, pussy."; }
+					{ langOutput.innerText = "Add more than one, coward."; }
 					else
 					{  langOutput.innerText = ""; }
 
